--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -5,6 +5,11 @@
   line-height: 18px;
   text-decoration: none;
   margin-left: 18px;
+  transition: opacity 1s;
+}
+
+.footer__link:hover {
+  opacity: 0.8;
 }
 
 @media screen and (max-width: 400px) {
