--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -5,4 +5,18 @@
   font-family: "Inter-regular";
   font-size: 16px;
   line-height: 26px;
+  max-width: 690px;
+  box-sizing: border-box;
+}
+
+@media screen and (max-width: 800px) {
+  .intro__text{
+    width: 720px;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .intro__text {
+    width: 288px;
+  }
 }
