--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -1,21 +1,5 @@
 .places {
-  margin: 92px 148px 0;
+  width: 100%;
+  box-sizing: border-box;
 }
 
-@media screen and (max-width: 1050px) {
-  .places {
-    margin: 92px 48px 0;
-  }
-}
-
-@media screen and (max-width: 800px) {
-  .places {
-    margin: 88px 24px 0;
-  }
-}
-
-@media screen and (max-width: 400px) {
-  .places {
-    margin: 64px 0 0;
-  }
-}
