--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,6 +1,6 @@
 .cover__subtitle {
   color: #fff;
-  font-family: "Inter-regular";
+  font-family: "Inter";
   margin-top: 32px;
   font-size: 18px;
   line-height: 22px;
