--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,6 +1,7 @@
 .cover__title {
   color: #fff;
-  font-family: "Inter-black";
+  font-family: "Inter";
+  font-weight: 900;
   margin-top: 245px;
   margin-bottom: 0;
   font-size: 72px;
