--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -2,7 +2,8 @@
   color: #fff;
   margin-top: 0;
   margin-bottom: 0;
-  font-family: "Inter-black";
+  font-family: "Inter";
+  font-weight: 900;
   font-size: 96px;
   line-height: 100px;
   text-align: center;
