--- a/blocks/place/__link/place__link.css
+++ b/blocks/place/__link/place__link.css
@@ -1,6 +1,6 @@
 .place__link {
   color: #fff;
-  font-family: "Inter-regular";
+  font-family: "Inter";
   font-size: 18px;
   line-height: 22px;
   margin-top: 12px;
