--- a/blocks/place/__url-heading/place__url-heading.css
+++ b/blocks/place/__url-heading/place__url-heading.css
@@ -1,6 +1,6 @@
 .place__url-heading {
   color: #AAAAAA;
-  font-family: "Inter-regular";
+  font-family: "Inter";
   font-size: 12px;
   line-height: 12px;
   margin-bottom: 0;
