--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -1,6 +1,6 @@
 .footer__link {
   color: #fff;
-  font-family: "inter-regular";
+  font-family: "inter";
   font-size: 16px;
   line-height: 18px;
   text-decoration: none;
