--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -1,6 +1,6 @@
 .header__lang-link {
   color: #fff;
-  font-family: "Inter-regular";
+  font-family: "Inter";
   font-size: 24px;
   line-height: 28px;
 }
