--- a/blocks/intro/__list/intro__list.css
+++ b/blocks/intro/__list/intro__list.css
@@ -2,7 +2,7 @@
   list-style-type: none;
   margin-top: 33px;
   margin-bottom: 0;
-  padding-left: 0;
+  padding: 0;
   width: 690px;
   box-sizing: border-box;
 }
