--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -2,21 +2,20 @@
   color: #fff;
   margin-top: 40px;
   margin-bottom: 0;
-  font-family: "Inter-regular";
+  font-family: "Inter";
   font-size: 16px;
   line-height: 26px;
   max-width: 690px;
-  box-sizing: border-box;
 }
 
 @media screen and (max-width: 800px) {
   .intro__text{
-    width: 720px;
+    max-width: 720px;
   }
 }
 
 @media screen and (max-width: 400px) {
   .intro__text {
-    width: 288px;
+    max-width: 288px;
   }
 }
