--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -2,7 +2,8 @@
   color: #fff;
   margin-top: 0;
   margin-bottom: 0;
-  font-family: "Inter-black";
+  font-family: "Inter";
+  font-weight: 900;
   font-size: 54px;
   line-height: 58px;
 }
