--- a/blocks/intro/__word/intro__word.css
+++ b/blocks/intro/__word/intro__word.css
@@ -1,6 +1,7 @@
 .intro__word {
   color: #fff;
-  font-family: "Inter-bold";
+  font-family: "Inter";
+  font-weight: 400;
   font-size: 12px;
   line-height: 150%;
 }
