--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -2,7 +2,8 @@
   color: #fff;
   margin-top: 8px;
   margin-bottom: 0;
-  font-family: "Inret-regular";
+  font-family: "Inter";
+  font-weight: 400;
   font-size: 10px;
   line-height: 14px;
   text-transform: uppercase;
