--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -1,34 +1,7 @@
 .lead__image {
-  background-image: url(../../../images/lead-polka.jpg);
-  width: 984px;
-  height: 615px;
+  width: 100%;
   background-size: contain;
   background-position: center;
-  margin-top: 64px;
-  margin-bottom: 0;
   background-repeat: no-repeat;
 }
 
-@media screen and (max-width: 1050px) {
-  .lead__image {
-  width: 928px;
-  height: 580px;
-  margin-top: 56px;
-  }
-}
-
-@media screen and (max-width: 800px) {
-  .lead__image {
-  width: 768px;
-  height: 480px;
-  margin-top: 56px;
-  }
-}
-
-@media screen and (max-width: 400px) {
-  .lead__image {
-  width: 320px;
-  height: 200px;
-  margin-top: 40px;
-  }
-}
