--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -1,7 +1,8 @@
 .lead__subtitle {
   color: #fff;
   text-align: center;
-  font-family: "Inter-regular";
+  font-family: "Inter";
+  font-weight: 400;
   font-size: 30px;
   line-height: 36px;
   white-space: pre-line;
@@ -10,6 +11,6 @@
 @media screen and (max-width: 400px) {
   .lead__subtitle {
     font-size: 16px;
-  line-height: 20px;
+    line-height: 20px;
   }
 }
