--- a/blocks/photo-grid/__item/photo-grid__item.css
+++ b/blocks/photo-grid/__item/photo-grid__item.css
@@ -1,25 +1,5 @@
 .photo-grid__item {
-  width: 284px;
-  height: 213px;
+  width: 100%;
+  object-fit: contain;
 }
 
-@media screen and (max-width: 1050px) {
-  .photo-grid__item {
-    width: 300px;
-    height: 225px;
-  }
-}
-
-@media screen and (max-width: 800px) {
-  .photo-grid__item {
-    width: 352px;
-    height: 264px;
-  }
-}
-
-@media screen and (max-width: 400px) {
-  .photo-grid__item {
-    width: 288px;
-    height: 216px;
-  }
-}
