--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     text-align: center;
-    min-height: 740px;
+    max-height: 740px;
     background-image: url(../../../images/cover-trains.jpg);
     background-repeat: no-repeat;
     background-size: cover;
@@ -32,18 +32,18 @@
 
 @media screen and (max-width: 1050px) {
     .cover__link {
-        min-height: 640px;
+        max-height: 640px;
     }
   }
   
   @media screen and (max-width: 800px) {
     .cover__link {
-      min-height: 480;
+      max-height: 480;
     }
   }
   
   @media screen and (max-width: 400px) {
     .cover__link {
-      min-height: 200px;
+      max-height: 200px;
     }
   }
