--- a/blocks/intro/__list/intro__list.css
+++ b/blocks/intro/__list/intro__list.css
@@ -3,18 +3,18 @@
   margin-top: 33px;
   margin-bottom: 0;
   padding: 0;
-  width: 690px;
+  max-width: 690px;
   box-sizing: border-box;
 }
 
 @media screen and (max-width: 800px) {
   .intro__list{
-    width: 720px;
+    max-width: 720px;
   }
 }
 
 @media screen and (max-width: 400px) {
   .intro__list {
-    width: 288px;
+    max-width: 288px;
   }
 }
