--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -1,25 +1,25 @@
 .place__image {
-  width: 460px;
-  height: 460px;
+  max-width: 460px;
+  max-height: 460px;
 }
 
 @media screen and (max-width: 1050px) {
   .place__image {
-    width: 440px;
-    height: 440px;
+    max-width: 440px;
+    max-height: 440px;
   }
 }
 
 @media screen and (max-width: 800px) {
   .place__image {
-    width: 340px;
-    height: 340px;
+    max-width: 340px;
+    max-height: 340px;
   }
 }
 
 @media screen and (max-width: 400px) {
   .place__image {
-    width: 320px;
-    height: 320px;
+    max-width: 320px;
+    max-height: 320px;
   }
 }
