--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     text-align: center;
+    justify-content: center;
     max-height: 740px;
     background-image: url(../../../images/cover-trains.jpg);
     background-repeat: no-repeat;
@@ -30,9 +31,9 @@
     opacity: 0.8;
 }
 
-@media screen and (max-width: 1050px) {
+@media screen and (max-width: 1200px) {
     .cover__link {
-        max-height: 640px;
+      max-height: 640px;
     }
   }
   
