--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -2,15 +2,30 @@
   color: #fff;
   font-family: "Inter";
   margin-top: 32px;
+  margin-bottom: 0;
+  padding-bottom: 245px;
   font-size: 18px;
   line-height: 22px;
   white-space: pre-line;
 }
 
+@media screen and (max-width: 1200px) {
+  .cover__subtitle {
+    padding-bottom: 195px;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  .cover__subtitle {
+    padding-bottom: 115px;
+  }
+}
+
 @media screen and (max-width: 400px) {
   .cover__subtitle {
-    margin-top: 16px;
     font-size: 16px;
     line-height: 16px;
+    margin-top: 16px;
+    padding-bottom: 33px;
   }
 }
