--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,31 +1,17 @@
 .cover__subtitle {
   color: #fff;
-  font-family: "Inter";
+  font-family: "Inter", Arial, sans-serif;
   margin-top: 32px;
   margin-bottom: 0;
-  padding-bottom: 245px;
   font-size: 18px;
   line-height: 22px;
-  white-space: pre-line;
-}
-
-@media screen and (max-width: 1200px) {
-  .cover__subtitle {
-    padding-bottom: 195px;
-  }
-}
-
-@media screen and (max-width: 800px) {
-  .cover__subtitle {
-    padding-bottom: 115px;
-  }
+  max-width: 360px;
 }
 
 @media screen and (max-width: 400px) {
   .cover__subtitle {
-    font-size: 16px;
+    font-size: 14px;
     line-height: 16px;
     margin-top: 16px;
-    padding-bottom: 33px;
   }
 }
