--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,35 +1,24 @@
 .cover__title {
   color: #fff;
-  font-family: "Inter";
+  font-family: "Inter", Arial, sans-serif;
   font-weight: 900;
   margin-top: 0;
   margin-bottom: 0;
-  padding-top: 245px;
   font-size: 72px;
   line-height: 76px;
-  white-space: pre-line;
+  max-width: 560px;
 }
 
 @media screen and (max-width: 1200px) {
   .cover__title {
     font-size: 72px;
     line-height: 76px;
-    padding-top: 195px;
   }
-}
-
-@media screen and (max-width: 800px) {
-  .cover__title {
-    font-size: 72px;
-    line-height: 76px;
-    padding-top: 115px;
-    }
 }
 
 @media screen and (max-width: 400px) {
   .cover__title {
     font-size: 32px;
     line-height: 35px;
-    padding-top: 33px;
-    }
+  }
 }
