--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -13,12 +13,12 @@
 
 @media screen and (max-width: 800px) {
   .cover {
-    padding: 90px 0;
+    padding: 90px 0 88px;
   }
 }
 
 @media screen and (max-width: 400px) {
   .cover {
-    padding: 66px 0;
+    padding: 66px 0 32px;
   }
 }
