--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -1,9 +1,10 @@
 .footer__copyright {
   color: #fff;
-  font-family: "inter";
+  font-family: "inter", Arial, sans-serif;
   font-size: 16px;
   line-height: 18px;
 }
+
 @media screen and (max-width: 400px) {
   .footer__copyright {
     margin-left: 16px;
