--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -1,6 +1,6 @@
 .footer__link {
   color: #fff;
-  font-family: "inter";
+  font-family: "inter", Arial, sans-serif;
   font-size: 16px;
   line-height: 18px;
   text-decoration: none;
@@ -16,5 +16,7 @@
   .footer__link {
     margin-top: 32px;
     margin-left: 0;
+    font-size: 24px;
+    line-height: 24px;
   }
 }
