--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -2,14 +2,14 @@
   color: #fff;
   margin-top: 40px;
   margin-bottom: 0;
-  font-family: "Inter";
+  font-family: "Inter", Arial, sans-serif;
   font-size: 16px;
   line-height: 26px;
   max-width: 690px;
 }
 
 @media screen and (max-width: 800px) {
-  .intro__text{
+  .intro__text {
     max-width: 720px;
   }
 }
