--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -2,7 +2,7 @@
   color: #fff;
   margin-top: 0;
   margin-bottom: 0;
-  font-family: "Inter";
+  font-family: "Inter", Arial, sans-serif;
   font-weight: 900;
   font-size: 54px;
   line-height: 58px;
@@ -10,7 +10,7 @@
 
 @media screen and (max-width: 400px) {
   .intro__title {
-  font-size: 32px;
-  line-height: 35px;
+    font-size: 32px;
+    line-height: 35px;
   }
 }
