--- a/blocks/intro/__word/intro__word.css
+++ b/blocks/intro/__word/intro__word.css
@@ -1,7 +1,9 @@
 .intro__word {
   color: #fff;
-  font-family: "Inter";
-  font-weight: 400;
+  font-family: "Inter", Arial, sans-serif;
+  font-weight: 700;
   font-size: 12px;
   line-height: 18px;
+  margin-top: 0;
+  margin-bottom: 0;
 }
