--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -2,9 +2,22 @@
   color: #fff;
   margin-top: 8px;
   margin-bottom: 0;
-  font-family: "Inter";
+  font-family: "Inter", Arial, sans-serif;
   font-weight: 400;
   font-size: 10px;
   line-height: 14px;
   text-transform: uppercase;
+  letter-spacing: 1.5px;
+}
+
+@media screen and (max-width: 800px) {
+  .lead__caption {
+    margin-left: 24px;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .lead__caption {
+    margin-left: 16px;
+  }
 }
