--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -1,16 +1,30 @@
 .lead__subtitle {
   color: #fff;
   text-align: center;
-  font-family: "Inter";
+  font-family: "Inter", Arial, sans-serif;
   font-weight: 400;
   font-size: 30px;
   line-height: 36px;
-  white-space: pre-line;
+  max-width: 640px;
+  margin: 32px calc(280px - 148px) 64px;
+}
+
+@media screen and (max-width: 1200px) {
+  .lead__subtitle {
+    margin: 32px 64px 56px;
+  }
+}
+
+@media screen and (max-width: 1200px) {
+  .lead__subtitle {
+    margin: 32px calc(152px - 48px) 56px;
+  }
 }
 
 @media screen and (max-width: 400px) {
   .lead__subtitle {
     font-size: 16px;
     line-height: 20px;
+    margin: 16px 16px 40px;
   }
 }
