--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -1,15 +1,27 @@
 .lead__title {
   color: #fff;
-
-  font-family: "Inter";
+  font-family: "Inter", Arial, sans-serif;
   font-weight: 900;
   font-size: 96px;
   line-height: 100px;
   text-align: center;
-  white-space: pre-line;
+  max-width: 720px;
+  margin: 0 calc(280px - 148px);
 }
 
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 1200px) {
+  .lead__title {
+    margin: 0 calc(152px - 48px);
+  }
+}
+
+@media screen and (max-width: 800px) {
+  .lead__title {
+    margin: 0 24px;
+  }
+}
+
+@media screen and (max-width: 700px) {
   .lead__title {
     font-size: 40px;
     line-height: 44px;
