--- a/blocks/page/__footer/page__footer.css
+++ b/blocks/page/__footer/page__footer.css
@@ -1,17 +1,17 @@
-.page__footer{
-  padding:0 48px 24px 48px;
+.page__footer {
+  padding: 0 48px 0 30px;
 }
 
-@media screen and (max-width: 900px) {
-  .page__footer{
-    padding:0 24px 24px;
+@media screen and (max-width: 800px) {
+  .page__footer {
+    padding-left: 6px;
+    padding-right: 24px;
   }
 }
 
-@media screen and (max-width: 900px) {
-  .page__footer{
-  padding-left: 16px;
-  padding-bottom: 24px;
+@media screen and (max-width: 400px) {
+  .page__footer {
+    padding-left: 16px;
+    padding-bottom: 24px;
   }
 }
-
