--- a/blocks/page/__header/page__header.css
+++ b/blocks/page/__header/page__header.css
@@ -1,16 +1,18 @@
-.page__header{
-  padding:28px 48px 0 48px;
+.page__header {
+  padding: 0 48px;
+  margin-top: 28px;
+  margin-bottom: 0;
 }
 
-@media screen and (max-width: 900px) {
-  .page__header{
-    padding:28px 24px 0;
+@media screen and (max-width: 800px) {
+  .page__header {
+    padding: 0 24px;
   }
 }
 
-@media screen and (max-width: 900px) {
-  .page__header{
-    padding:16px 16px 0;
+@media screen and (max-width: 400px) {
+  .page__header {
+    padding: 0 16px;
+    margin-top: 16px;
   }
 }
-
