--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -1,8 +1,10 @@
 .place__paragraph {
   color: #fff;
-  font-family: "Inter";
+  font-family: "Inter", Arial, sans-serif;
   font-size: 18px;
   line-height: 29px;
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
 @media screen and (max-width: 800px) {
