--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -1,24 +1,26 @@
 .place__title {
   color: #fff;
-  font-family: "Inter";
+  font-family: "Inter", Arial, sans-serif;
   font-weight: 900;
   font-size: 72px;
   line-height: 76px;
   margin-top: 0;
   margin-bottom: 0;
+  justify-content: end;
 }
 
 @media screen and (max-width: 800px) {
   .place__title {
-  font-size: 42px;
-  line-height: 46px;
+    font-size: 42px;
+    line-height: 46px;
+    align-self: end;
   }
 }
 
 @media screen and (max-width: 400px) {
   .place__title {
-  font-size: 32px;
-  line-height: 35px;
-  margin-left: 16px;
+    font-size: 32px;
+    line-height: 35px;
+    margin-left: 16px;
   }
 }
