--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -17,13 +17,15 @@
   .place {
     grid-template-columns: 340px 352px;
     gap: 48px 28px;
+    margin-top: 73px;
   }
 }
 
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 700px) {
   .place {
     grid-template-columns: 320px;
     row-gap: 32px;
     margin-top: 50px;
+    justify-content: center;
   }
 }
