--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -1,13 +1,14 @@
 .footer__copyright {
   color: #fff;
   font-family: "inter", Arial, sans-serif;
-  font-size: 16px;
-  line-height: 18px;
+  font-size: 14px;
+  line-height: 16px;
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 700px) {
   .footer__copyright {
-    margin-left: 16px;
     margin-top: 48px;
   }
 }
