--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -4,7 +4,8 @@
   font-size: 16px;
   line-height: 18px;
   text-decoration: none;
-  margin-left: 18px;
+  margin-top: 0;
+  margin-bottom: 0;
   transition: opacity 1s;
 }
 
@@ -12,10 +13,10 @@
   opacity: 0.8;
 }
 
+
 @media screen and (max-width: 400px) {
   .footer__link {
     margin-top: 32px;
-    margin-left: 0;
     font-size: 24px;
     line-height: 24px;
   }
