--- a/blocks/footer/__links/footer__links.css
+++ b/blocks/footer/__links/footer__links.css
@@ -1,7 +1,12 @@
-@media screen and (max-width: 400px) {
-  .footer__links {
-    display: flex;
-    flex-direction: column;
-    margin-left: 16px;
-  }
+.footer__links {
+    display: grid;
+    grid-template-columns: repeat(5, 0.5fr);
+    gap: 18px;
+}
+
+@media screen and (max-width: 700px) {
+    .footer__links {
+        grid-template-columns: repeat(1, 1fr);
+        gap: 32px;
+    }
 }
