--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -8,6 +8,7 @@
   line-height: 14px;
   text-transform: uppercase;
   letter-spacing: 1.5px;
+  align-self: flex-start;
 }
 
 @media screen and (max-width: 800px) {
