--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -23,6 +23,7 @@
 
 @media screen and (max-width: 700px) {
   .lead__title {
+    margin: 0 16px;
     font-size: 40px;
     line-height: 44px;
   }
