--- a/blocks/page/__footer/page__footer.css
+++ b/blocks/page/__footer/page__footer.css
@@ -1,10 +1,10 @@
 .page__footer {
-  padding: 0 48px 0 30px;
+  padding: 0 48px 24px 48px;
 }
 
 @media screen and (max-width: 800px) {
   .page__footer {
-    padding-left: 6px;
+    padding-left: 24px;
     padding-right: 24px;
   }
 }
@@ -12,6 +12,6 @@
 @media screen and (max-width: 400px) {
   .page__footer {
     padding-left: 16px;
-    padding-bottom: 24px;
+    padding-bottom: 16px;
   }
 }
