--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -1,6 +1,6 @@
 .place {
   display: grid;
-  grid-template-columns: 460px 484px;
+  grid-template-columns: 460px 1fr;
   gap: 48px 40px;
   margin-top: 80px;
   margin-bottom: 0;
@@ -8,14 +8,14 @@
 
 @media screen and (max-width: 1200px) {
   .place {
-    grid-template-columns: 440px 456px;
+    grid-template-columns: 440px 1fr;
     gap: 48px 32px;
   }
 }
 
 @media screen and (max-width: 800px) {
   .place {
-    grid-template-columns: 340px 352px;
+    grid-template-columns: 340px 1fr;
     gap: 48px 28px;
     margin-top: 73px;
   }
