--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -25,7 +25,7 @@
   background-color: #2a2c2f;
   opacity: 0.3;
   z-index: -1;
-  transition: opacity 0.3 ease;
+  transition: opacity 0.3s ease;
 }
 
 .cover__link:hover::before {
