--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -6,7 +6,12 @@
   text-decoration: none;
   margin-top: 0;
   margin-bottom: 0;
+  margin-right: 18px;
   transition: opacity 1s;
+}
+
+.footer__link:last-child {
+  margin-right: 0;
 }
 
 .footer__link:hover {
@@ -14,9 +19,9 @@
 }
 
 
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 500px) {
   .footer__link {
-    margin-top: 32px;
+    margin-right: 0;
     font-size: 24px;
     line-height: 24px;
   }
