--- a/blocks/footer/__links/footer__links.css
+++ b/blocks/footer/__links/footer__links.css
@@ -1,12 +1,12 @@
 .footer__links {
-    display: grid;
-    grid-template-columns: repeat(5, 0.5fr);
-    gap: 18px;
+    display: flex;
+    flex-wrap: wrap;
 }
 
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 500px) {
     .footer__links {
-        grid-template-columns: repeat(1, 1fr);
+        display: grid;
+        grid-template-columns: 1fr;
         gap: 32px;
     }
 }
